add javascript to capture form value, return split string, reverse, and join.
Co-authored-by: Drew Henderson <drewhendersonemail@gmail.com>
Co-authored-by: Christy Welch <christinamawel@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
 </head>
 <body>
   <div class="container">
+    <h1>We are going to play with some words!</h1>
+    <form id="wordplay">
+        <div class="form-group">
+          <label for="sentence1">Type a sentence here:</label>
+          <input id="sentence1" class="form-control" type="text">
+        </div>
+    <button type="submit" class="btn-dark">Submit your sentence</button>
+    </form>
+    <div id="output">
 
+    </div>
   </div>
     
 </body>
